--- a/README
+++ b/README
@@ -19,8 +19,6 @@ R3::conn, R3::func and R3::itab provide a object oriented interface
 to SAP R/3 remote function calls. The modules needs R3::rfcapi which
 provides a Perl interface to RFCSDK.
 
-The R3 module version 0.01 provides no useful functionality.
-
 REQUIREMENTS
 ============
 
@@ -34,27 +32,22 @@ R3::* modules anyway.
 INSTALLATION
 ============
 
-Download and install R3::rfcapi, R3:conn, R3::func and R3::itab in
-that order.
+R3 installation also installs R3::conn, R3::func and R3::itab.
+R3::rfcapi must be installed before R3. Version 0.30 of R3
+requires R3::rfcapi 0.30 or later.
 
-To install R3 (which is not really useful) se below. For the
-other R3::* modules, see their README file.
-
-On Linux and other UNIX like systems:
+To install R3 on Linux and other UNIX like systems:
 	$ perl Makefile.PL
 	$ make
 	$ make test
 	$ make install
-You probably need to execute the last command root.
+You probably need to execute the last command as root.
 
 On NT with VC++:
 	D:\R3>perl Makefile.PL
 	D:\R3>nmake
 	D:\R3>nmake test
 	D:\R3>nmake install
-
-On other platforms:
-Sorry, I do not know. Please tell me if you do.
 
 AUTHOR
 ======
